<resources>
    <string name="app_name">Laskin</string>
    <string name="ENTER">Enter</string>
    <string name="CA">CA</string>
    <string name="C">C</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="comma">.</string>
    <string name="menubutton">...</string>
    <string name="menuabout">About</string>
    <string name="menuhelp">Help</string>
    <string name="helpGetButton">GET!</string>
    <string name="helpClearButton">Clear</string>
</resources>
